# vdoram-artifacts

./: README.md
CompatCircuit/: .editorconfig  CompatCircuit.sln  LICENSE.md  README.md
CompatCircuit/CollaborativeZkVm/: Anonymous.CollaborativeZkVm.csproj  Program.cs  SadPencil.CollaborativeZkVm.csproj  Startup.cs
CompatCircuit/CollaborativeZkVmExperiment/: Anonymous.CollaborativeZkVmExperiment.csproj  Program.cs  SadPencil.CollaborativeZkVmExperiment.csproj  Startup.cs
CompatCircuit/CollaborativeZkVmTest/: Anonymous.CollaborativeZkVmTest.csproj  MemoryTraceSortCircuitBoardGeneratorTest.cs  MultiPartyZkVmTest.cs  PrivateInputShareCircuitBoardGeneratorTest.cs  SadPencil.CollaborativeZkVmTest.csproj  TestStartup.cs  ZkProgramExamplesTest.cs  ZkVmCircuitTest.cs
CompatCircuit/CompatCircuitCore/: FodyWeavers.xml  Program.cs  SadPencil.CompatCircuitCore.csproj  Startup.cs
CompatCircuit/CompatCircuitCoreTest/: Anonymous.CompatCircuitCoreTest.csproj  BinarySerializationTest.cs  CompatCircuitSerializationTest.cs  FieldTest.cs  IsIncreasingByOneTest.cs  JsonSerializationTest.cs  MpcBeaverTripleTest.cs  MpcBit2ATest.cs  MpcBitAdderTest.cs  MpcBitDecompositionTest.cs  RingTest.cs  (+6 more)
CompatCircuit/Experiments/draw/: 1-generate-preshare-script-data.py  2-analyze_data.py  3a-draw_exp1.py  3b-draw_exp23_1.py  3c-draw_exp3_2.py  3d-get_bandwidth.py  analyze_data.py  config.py  exp_data.pkl  pyproject.toml
CompatCircuit/Experiments/draw/rawdata/: .gitignore  README.md
collaborative-zksnark-mod/: README.md  collaborative-zksnark.CompatCircuit.patch.xz
rawdata/: README.md
(+313 files in other folders)
