[project]
name = "draw"
version = "0.1.0"
description = "Draw figures for CompatCircuit and zkVM experiments"
authors = [
    {name = "Huayi Qi", email = "qi@huayi.email"},
]
dependencies = [
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "numpy>=2.1.0",
]
requires-python = "==3.12.*"
license = {text = "MIT"}


[tool.pdm]
distribution = false
